# info_robot

./: .gitignore  README.md
Cam_dir/: --library=pthread  Makefile  agUrco.py  cam.c  cam.cpp  cam.py  camera_calibration.py  data_generation.py  test_odetect.cpp
backup_GROU_lidar/main_folder/: lidar.h  main.cpp
backup_GROU_lidar/sdk/src/hal/: event.h  locker.hZone.Identifier
lidar_dir/: .Makefile.swp  Makefile
lidar_dir/main_folder/: .Makefile.swo  .Makefile.swp  Makefile  data.txt  headers.h  lidar.cpp  lidar_graph.py  main.cpp
lidar_dir/output/Linux/Release/: main_folder
main_controller/: CMakeLists.txt  controller.c  feedForwardOdometry.c  feedbackOdometry.c  fieldpath.c  forkControl.c  generatePlot.py  headers.h  idees.txt  kalman.c  logPosition.txt  main.c  oldMain.c  spi_com.c  strategy.c  utils.c  variables.c
main_controller/logFiles/: generateLidarLog.py  generatePlot.py  logI2C.txt  logLidar.txt  logPosition.txt  logPositionBasNiveau2.txt  logPositionBasNiveauForward.txt  logPositionBasNiveauRotation.txt  logPositionBasNiveauTest1.txt  logPositionBasNiveauTranslationSlow.txt  logPositionBasNiveayTranslationQuick.txt  logPositionSensTrigo.txt  logPositionWTFQ.txt
main_controller/src/: Aruco.py  Makefile  camera.c  feedbackOdometry.c  fieldpath.c  forkControl.c  forkStrategy.c  headers.h  i2c.c  initializations.c  kalman.c  main.c  mainStrategy.c  nextion.c  oldMain.c  utils.c  variables.c
sender_test/: CMakeLists.txt  main.cpp
